automation-terraform/Rede.tf
resource "aws_eip_association" "eip_assoc" {
  instance_id   = aws_instance.ec2.id
  allocation_id = aws_eip.eip.id
}
resource "aws_eip" "eip" {
  vpc = true
}
